...
                label = stringResource(R.string.settings_button),
                onClick = {
                    onClose()
                    onSettings()
                },
                textColor = textColor,
                testTag = "SettingsButton",
            )
        }

        Spacer(modifier = Modifier.height(16.dp))
    }
}
...
